--- a/examples/counter/README
+++ b/examples/counter/README
@@ -1,3 +1,5 @@
+counter - Web page counter for Thales
+Copyright (C) 2003 Hervé Rousseau <z-master@apinc.org>
 ///////////////////////
 This is the Thales based IRC user counter
 It works like a hit counter on web pages, but with irc & thales.
@@ -9,7 +11,6 @@ http://www.dwchat.net/tools/thales/compteur_js.php?chan=dwchat&skin=1
 (for the non-php aware hosting services).
 
 This script is based on digits2imgs script delivered with thales too.
-(i admit this script is a bit useless :0).
 
 So, to use it, you will have to configure the MySQL & site variables to fit your
 environnement. That's to say, the mysql host, user, pass & database,
