--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
-Thales Installation
-===================
+GNU Thales Installation
+=======================
 
 Thales's installation is quite straightforward.
 - Untar the archive
