--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 GNU Thales 0.9.5 (XX/XX/XXXX)
+   - hardcoded url (motd, admin) changes to savannah.
    - Unreal's SWHOIS support.
    - server.lastsplit is not overwritten when a server rejoins.
    - changed "Thales" to "GNU Thales" where it was relevant.
