--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 GNU Thales 0.9.5 (XX/XX/XXXX)
+   - Fixed user/chan modes for Unreal beta19 support (chanmodes +I and +H not used anymore)
    - NeedMaintainers file added.
    - removed Sequana support
    - safely ignore Unreal's EOS messages, but send one after login.
