linkedto is now an int

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+GNU Thales 0.9.6 (XX/XX/XXXX)
+   - server.linkedto is now an int (was a tinyint).
 GNU Thales 0.9.5 (08/02/2004)
    - Fixed user/chan modes for Unreal beta19 support (chanmodes +I and +H not
      used anymore)
