--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-GNU Thales 1.0 (06/05/2004)
+GNU Thales 1.0 (09/05/2004)
+   - added a workaround for a possible unreal bug.
+   - using autoconf 2.59 instead of autoconf 2.13.
    - no longer report usage if you are using Unreal.
    - added support for unreal modules' modes. see the UnrealModules file.
    - added Memphisnet.org's memphistools ! see examples/memphistools/.
