Added Fontana's patch

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,160 +1,14 @@
    - added support for Unreal and Bahamut's NOQUIT
-GNU Thales 1.0 (09/05/2004)
-   - added a workaround for a possible unreal bug.
-   - using autoconf 2.59 instead of autoconf 2.13.
-   - no longer report usage if you are using Unreal.
-   - added support for unreal modules' modes. see the UnrealModules file.
-   - added Memphisnet.org's memphistools ! see examples/memphistools/.
-     Provided by XytraS <xytras@memphisnet.org>
-   - added secondary keys to ison table, which provided a 10% speed benefit.
-   - added unreal's +T cmode.
-   - added unreal's +D umode (needed for PrivDeaf module)
-   - added unreal's +z umode. patch from nick martini <nick@misanthropia.nu>
-   - nickinfo, an example from Andreas Lindemann <admiral@1sq.org> !
-   - Recycled-counter, an example from ProPheT <prophet@recycled-irc.org> !
-   - server.linkedto is now an int (was a tinyint).
-GNU Thales 0.9.5 (08/02/2004)
-   - Fixed user/chan modes for Unreal beta19 support (chanmodes +I and +H not
-     used anymore)
-   - NeedMaintainers file added.
-   - removed Sequana support
-   - safely ignore Unreal's EOS messages, but send one after login.
-   - now keeps track of max number of servers too.
-   - hardcoded url (motd, admin) changes to savannah.
-   - Unreal's SWHOIS support.
-   - server.lastsplit is not overwritten when a server rejoins.
-   - changed "Thales" to "GNU Thales" where it was relevant.
-   - renamed log() to mylog(), and log_perror() to mylog_perror() to prevent
-     conflicts.
-   - added TBUST to hybrid CAPAB line. Credits go to Wes Baehr
-     <iwes@totalmac.net>
-   - added a php script for clones detection. contributed by
-     Jens 'DukePyrolator' Voss <DukePyrolator@wiredirc.net>
-   - added Unreal mode +M
-Thales 0.9.4 (19/03/2003)
-   - away status was not properly restored in Caching mode. (reported
-     by admiral@ns.elbenstern.de)
-   - renamed strlwr to strtolwr (misc.c) to be able to compile on cygwin.
-   - improved ReportUsage.sh POSIX compatibility
-   - added Unreal usermodes +R & +V
-   - increased nickname length in SQL table user for hybrid ircd.
-   - re-indented the whole code using indent
-   - fixed bug in caching mode
-   - added log messages to the hash functions in verbose mode
-   - fixed bug in caching mode
-Thales 0.9.3 (04/02/2003)
-   - removed debug message
-Thales 0.9.2 (03/02/2003)
-   - added support for ultimate 2.8 +L chanmode
-   - thales could receive SJOIN for nonexisting users under some race
-     conditions. Now ignore them.
-   - added a workaround for Unreal bug (sending multiple SJOINs for
-     same (user, channel))
-   - removed some compilation warnings
-Thales 0.9.1 (12/02/2003)
-   - fixed small parsing bug from ircservices code
-   - fixed bugs in ultimate 2.8 support
-   - ability to hide channel passwords in config file
-   - included Wes Baehr's patch to fix TOPICs on Hybrid
-   - added --enable-noreportusage configure option to disable the usage report
-   - new hash function (should improve performance)
-   - Modified ReportUsage.sh to send mail to thales-usage@ and include Thales
-     version.
-   - SQL tables names are defined in db.h. They can be changed.
-Thales 0.9.0 (05/11/2002)
-   - added usage survey
-   - more detailed info about libmysqlclient linking problem.
-   - fixed ultimate 2.8 support
-   - removed nonexistent ultimate umode +q
-Thales 0.1.5 (23/10/2002)
-   - Ultimate 2.8 support
-   - MOTDFile option removed from config
-   - Hybrid 7 support
-   - now says for which ircd it was compiled on startup.
-   - New contrib : counter/ by z-master <z-master@apinc.org>
-Thales 0.1.4 (24/06/2002)
-   - hashlist support can now be disabled to fix some crashes. Anyway,
-     I'm very interested in fixing those crashes, so please tell me if
-     you experience those.
-   - now keeps an history. See the UserCacheTime & ServerCacheTime
-     parameters in the config.
-   - now includes contrib/logfilter to generate smaller logfiles for bug
-     reporting purposes.
-   - fixed a small memleak in db_getnick()
-Thales 0.1.3 (18/05/2002)
-   - new configure options : --enable-static and --enable-no-modes.
-     see INSTALL for details.
-   - thales entered an infinite loop when logging an unknown mode.
-     log an unknown mode only once, and give an example IRC message.
-   - fflush the logfile after logging
-   - renamed data/thales-*.sql to data/mysql-*.sql and changed the doc
-     accordingly (that's to prepare PostgreSQL support).  
-   - the ircd type can now be specified using the --with-ircd=IRCDTYPE
-     configure option.
-   - added info on how to keep maxvalues data after an upgrade in the
-     README.
-   - LUSERS command is now fully implemented.
-   - added a connecttime field to the server table to be able to know
-     when a server connected to the net. (table structure must be reloaded,
-     see README file)
-   - now crashes without segfaulting if it can't connect to the DBMS.
-   - now sends a GLOBOPS before going down, giving a reason.
-Thales 0.1.2 (03/05/2002)
-   - optimized things using internal hashlists instead of querying the
-     database. resources usage decreased by 20%.
-   - rewrote messages.*, removing all DBMS stuff, and putting it in
-     actions.* to prepare PostgreSQL support. As a consequence, it's
-     no longer possible to ignore the epona bug which causes services
-     to join a channel where they already are.
-   - now checks if modes are known before trying to save them
-     (prevents crashes :o) )
-   - corrected a bug in mode -k handling and cleaned up mode handling
-   - re-added +R usermode for bahamut, ircdru and sequana (It wasn't
-     displayed as an available user mode on connect)
-   - added LUSERS command.
-   - now stores max number of users and channels in the "maxvalues" table.
-   - added NICKIP support for Bahamut, Sequana, IRCD-RU and Ultimate. The IP
-     address is stored in the "user" table with the name "ipaddr". You must
-     reload the database structure before running the new version for the
-     first time.  
+2006-11-18    Claudio Fontana <claudio@gnu.org>
+	
+	* ReportUsage.sh: removed.
+	* configure.in: do not get input from stdin, do not mail reports
+	  to the original author. Fix to satisfy GNU standards.
+	  Replace AM_CONFIG_HEADER with AC_CONFIG_HEADERS.
+	* src/Makefile.am: configuration file path fixed.
+	* src/conf.h: remove THALES_CONF definition.
+	* data/Makefile.am: support DESTDIR, use correct variables for data.
+	* ChangeLog: recreated in GNU format, moved old to NEWS.
+	* Makefile.am: adjust for the changes, remove foreign option.
+	* autogen.sh: new file
 
-Thales 0.1.1 (28/04/2002)
-   - improved autoconf's mysql test
-   - now uses mysql_real_* instead of mysql_*
-   - cleaned modes checks
-   - added IRCD-RU support (patch provided by Bob Ershov <raveman@wenet.ru>)
-   - added Magnet <magnet@epiknet.org>'s path for MDESC on Unreal
-   - added Partizanu <partizanu@expres.ro>'s digit2img script to contrib
-   - added Andy Smith <andy@strugglers.net>'s channels list script to contrib
-
-Thales 0.1.0 (20/04/2002)
-   - there's now a mailing list ! see README.
-   - cleaned up .sql files : this should decrease disk usage and improve perf a
-     little.
-   - added UltimateIRCD 3.0.0 support
-                                     (helped by salk@junglebean.co.za)
-   - make install doesn't overwrite thales.conf anymore.
-   - improved Unreal support a little
-                                     (reported by magnet@epiknet.org)
-   - Channel modes arguments (+k) can now contain quotes
-                                     (reported by shadow@homelanfed.com)
-   - Corrected the bug which (I suppose) caused many crashes
-                                     (reported by magnet@epiknet.org)
-
-Thales 0.0.9 (14/04/2002)
-   - corrected a small MySQL linking problem in autoconf/automake 
-                                     (reported by mikep1230@att.net)
-
-Thales 0.0.8 (12/04/2002)
-   - added /TIME, /ADMIN, /MOTD
-   - gindented all the code (looks better now ;p)
-   - added Bahamut support
-   - removed a few warnings in log.c
-   - added copyright info to all files
-   - Thales now uses autoconf & automake, and IRCD is selected in ./configure
-   - AWAY and {CHG,SET}{HOST,IDENT,NAME} are now supported.
-
-Thales 0.0.7 (07/04/2002)
-   - First described version
-   - Unreal and Sequana support
-   - Docs written
