--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-   - added support for Unreal and Bahamut's NOQUIT
+2007-02-02  Klaus Weiss  <klaus.weiss@nanet.at>
+
+	* main.c (main): added getopt_long() support
+
 2006-11-18    Claudio Fontana <claudio@gnu.org>
 	
 	* ReportUsage.sh: removed.
