--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+GNU Thales 1.1 (03/02/2007)
+   - added getopt_long() support
+   - added capability to change mysql port within configuration file
+   - path of configuration file can now be changed without rebuilding
 GNU Thales 1.0 (09/05/2004)
    - added a workaround for a possible unreal bug.
    - using autoconf 2.59 instead of autoconf 2.13.
