--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-03  Klaus Weiss  <klaus.weiss@nanet.at>
+
+	* src/conf.c (directives): added MysqlPort and MysqlPrefix
+	* src/db.c (db_connect): enables MysqlPort and MysqlPrefix
+	* src/db.c (db_checkserver, db_getserver, db_checknick) 
+	(db_getnick_unsure, db_getnick, db_getservfromnick, db_removenick)
+	(db_removefromchans, db_checkemtpychan, db_getlusers, db_getchannel)
+	(db_getchancreate, db_cleanserver, db_cleanuser, db_offlineusers):
+	enables MysqlPrefix
+
 2007-02-02  Klaus Weiss  <klaus.weiss@nanet.at>
 
 	* src/main.c (main): added getopt_long() support
